--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
       - name: Checkout SourceCode
-      - uses: actions/checkout@v1
+        uses: actions/checkout@v1
 
       - name: Download SonarScanner
         run: |
