--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,19 @@ jobs:
 
       - name: Download SonarScanner
         run: |
-            wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.3.0.1492-linux.zip
-            unzip sonar-scanner-cli-3.3.0.1492-linux.zip
+            export SONAR_SCANNER_VERSION=4.0.0.1744
+            export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux
+            rm -rf $SONAR_SCANNER_HOME
+            mkdir -p $SONAR_SCANNER_HOME
+            curl -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux.zip
+            unzip $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
+            rm $HOME/.sonar/sonar-scanner.zip
+            export PATH=$SONAR_SCANNER_HOME/bin:$PATH
+            export SONAR_SCANNER_OPTS="-server"
             
       - name: Analyze by SonarScanner
         run: |
-            ./sonar-scanner-3.3.0.1492-linux/bin/sonar-scanner \
+            sonar-scanner \
             -Dsonar.projectKey=kotauchisunsun_VirtualMotionCapture \
             -Dsonar.organization=kotauchisunsun-github \
             -Dsonar.sources=. \
