--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,28 +10,9 @@ jobs:
     steps:
       - name: Checkout SourceCode
         uses: actions/checkout@v1
-
-      - name: Download SonarScanner
-        run: |
-            export SONAR_SCANNER_VERSION=4.0.0.1744
-            export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux
-            rm -rf $SONAR_SCANNER_HOME
-            mkdir -p $SONAR_SCANNER_HOME
-            curl -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux.zip
-            unzip $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
-            rm $HOME/.sonar/sonar-scanner.zip
-            
-      - name: Analyze by SonarScanner
-        run: |
-            export SONAR_SCANNER_VERSION=4.0.0.1744
-            export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux
-            export PATH=$SONAR_SCANNER_HOME/bin:$PATH
-            export SONAR_SCANNER_OPTS="-server"
-            sonar-scanner \
-            -Dsonar.projectKey=kotauchisunsun_VirtualMotionCapture \
-            -Dsonar.organization=kotauchisunsun-github \
-            -Dsonar.sources=. \
-            -Dsonar.exclusions=sonar-scanner-3.3.0.1492-linux/** \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.projectVersion=${GITHUB_REF} \
-            -Dsonar.login=${SONAR_CLOUD_TOKEN}
+        
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
