--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,14 +5,11 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout SourceCode
         uses: actions/checkout@v1
         
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_CLOUD_TOKEN }}
+      - name: Test MSBuild.exe
+        run: MSBuild.exe
