--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,8 @@ jobs:
       - name: Prepare Env
         run: dotnet tool install --global dotnet-sonarscanner --version 4.8.0
         
-      - name: Test MSBuild.exe
-        run: MSBuild.exe
+      - name: Anayze
+        run: |
+            SonarQube.Scanner.MSBuild.exe begin /k:"org.sonarqube:sonarqube-scanner-msbuild" /n:"VirtualMotionCapture Analysis" /v:"1.0"
+            MSBuild.exe ControlWindowWPF\ControlWindowWPF.sln
+            SonarQube.Scanner.MSBuild.exe end
