--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
         
       - name: Anayze
         run: |
-            SonarQube.Scanner.MSBuild.exe begin /k:"kotauchisunsun_VirtualMotionCapture"
-            MSBuild.exe ControlWindowWPF\ControlWindowWPF.sln
-            SonarQube.Scanner.MSBuild.exe end
+            dotnet sonarscanner begin /k:"kotauchisunsun_VirtualMotionCapture"
+            dotnet build ControlWindowWPF\ControlWindowWPF.sln
+            dotnet sonarscanner end 
