--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
         
       - name: Anayze
         run: |
-            dotnet sonarscanner begin /k:"kotauchisunsun_VirtualMotionCapture" /d:"sonar.organization=kotauchisunsun-github" /d:"sonar.host.url=https://sonarcloud.io"
+            dotnet sonarscanner begin /k:"kotauchisunsun_VirtualMotionCapture" /d:"sonar.organization=kotauchisunsun-github" /d:"sonar.host.url=https://sonarcloud.io" /d:"sonar.login=$env.secrets.SONAR_CLOUD_TOKEN"
             dotnet build ControlWindowWPF\ControlWindowWPF.sln
             dotnet sonarscanner end /d:"sonar.organization=kotauchisunsun-github" /d:"sonar.host.url=https://sonarcloud.io"
