--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v1
       
       - name: check
-        run:  MSBuild.exe
+        run:  ${env:ProgramFiles(x86)}\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe -?
         
       - name: Prepare Env
         run: dotnet tool install --global dotnet-sonarscanner --version 4.8.0
