--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,12 @@ jobs:
       - name: Anayze
         run: |
             Set-Item Env:Path "$Env:Path;$Pwd\sonar-scanner-4.1.0.1829\bin\;"
-            sonar-scanner begin /k:"kotauchisunsun_VirtualMotionCapture" /o:"kotauchisunsun-github" /d:"sonar.host.url=https://sonarcloud.io" /d:"sonar.login=${{ secrets.SONAR_CLOUD_TOKEN }}"
+            sonar-scanner --help
+            sonar-scanner begin \
+              -D "sonar.projectKey=kotauchisunsun_VirtualMotionCapture" \
+              -D "sonar.organization=kotauchisunsun-github" \
+              -D "sonar.host.url=https://sonarcloud.io" \
+              -D "sonar.login=${{ secrets.SONAR_CLOUD_TOKEN }}"
             &"${env:ProgramFiles(x86)}\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe"  ControlWindowWPF\ControlWindowWPF.sln
-            sonar-scanner end /d:"sonar.login=${{ secrets.SONAR_CLOUD_TOKEN }}"
+            sonar-scanner end \
+              -D "sonar.login=${{ secrets.SONAR_CLOUD_TOKEN }}"
