--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,11 @@ jobs:
         run: |
             Set-Item Env:Path "$Env:Path;$Pwd\sonar-scanner-4.1.0.1829\bin\;"
             sonar-scanner --help
-            sonar-scanner begin \
-              -D "sonar.projectKey=kotauchisunsun_VirtualMotionCapture" \
-              -D "sonar.organization=kotauchisunsun-github" \
-              -D "sonar.host.url=https://sonarcloud.io" \
+            sonar-scanner begin `
+              -D "sonar.projectKey=kotauchisunsun_VirtualMotionCapture" `
+              -D "sonar.organization=kotauchisunsun-github" `
+              -D "sonar.host.url=https://sonarcloud.io" `
               -D "sonar.login=${{ secrets.SONAR_CLOUD_TOKEN }}"
             &"${env:ProgramFiles(x86)}\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe"  ControlWindowWPF\ControlWindowWPF.sln
-            sonar-scanner end \
+            sonar-scanner end `
               -D "sonar.login=${{ secrets.SONAR_CLOUD_TOKEN }}"
